| Summary: | ASTERISK-29622: ARI: external media create doesn't use body parameter | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2021-08-31 02:35:26 | Date Closed: | 2021-09-02 15:09:53 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari_channels |
| Versions: | 16.20.0 18.6.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | {noformat}
# curl -s -X POST -u asterisk:asterisk 127.0.0.1:8088/ari/channels/externalMedia \ > -H 'Content-Type: application/json; charset=utf-8' \ > -d '{"app": "sdp", "external_host": "test.com:5060", "transport": "udp", "format": "ulaw", "connection_type": "client", "direction": "both", "encapsulation": "rtp"}' {"message":"app cannot be empty"} {noformat} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-08-31 02:35:31.810-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-09-02 15:09:54.181-0500 Change 16432 merged by Friendly Automation: resource_channels.c: Fix wrong external media parameter parse [https://gerrit.asterisk.org/c/asterisk/+/16432|https://gerrit.asterisk.org/c/asterisk/+/16432] By: Friendly Automation (friendly-automation) 2021-09-02 15:18:04.728-0500 Change 16404 merged by Kevin Harwell: resource_channels.c: Fix wrong external media parameter parse [https://gerrit.asterisk.org/c/asterisk/+/16404|https://gerrit.asterisk.org/c/asterisk/+/16404] By: Friendly Automation (friendly-automation) 2021-09-02 15:18:33.004-0500 Change 16431 merged by Kevin Harwell: resource_channels.c: Fix wrong external media parameter parse [https://gerrit.asterisk.org/c/asterisk/+/16431|https://gerrit.asterisk.org/c/asterisk/+/16431] By: Friendly Automation (friendly-automation) 2021-09-02 15:53:22.609-0500 Change 16430 merged by Friendly Automation: resource_channels.c: Fix wrong external media parameter parse [https://gerrit.asterisk.org/c/asterisk/+/16430|https://gerrit.asterisk.org/c/asterisk/+/16430] | ||